# learning-ml-01

./: pyproject.toml
ch01/: image.py  main.py
ch02/: and.py
ch03/: matrix.py  mnist.py  neural.py  neural_network.py  neuralnet_mnist.py  softmax.py
ch04/: edu.py  gradient.py  gradient_2d.py  loss_functions.py  neural_mnist.py  num_diff.py  simple.py  train_neuralnet.py  two_layer_net.py
